--- a/Asset/AssetPage.xaml
+++ b/Asset/AssetPage.xaml
@@ -11,28 +11,46 @@
       FontFamily="{StaticResource OpenSans}">
 
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="41*"/>
+            <RowDefinition Height="7*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="28*"/>
+            <ColumnDefinition Width="191*"/>
+            <ColumnDefinition Width="37*"/>
+        </Grid.ColumnDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="[Re] D W  Dashboard – 2.png"/>
         </Grid.Background>
-        <Button x:Name="createAssetBtn" Content="Add Asset" HorizontalAlignment="Left" Margin="862,67,0,0" VerticalAlignment="Top" Width="120" Background="#FF000050" FontWeight="SemiBold" BorderBrush="#FF000050" Height="40" FontSize="18"/>
-        <ListView x:Name="asset_listview" HorizontalAlignment="Left" Height="379" Margin="55,140,0,0" VerticalAlignment="Top" Width="1163" MouseDoubleClick="asset_listview_MouseDoubleClick">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Height="174" Width="141" Orientation="Vertical">
-                        <Image Source="{Binding Image}" Stretch="Fill" Width="100" Height="100" />
-                        <TextBlock Text="{Binding Name}"/>
-                        <TextBlock Text="{Binding Quantity}"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        <Button x:Name="next_page_button" Content="Next" HorizontalAlignment="Left" Margin="1118,549,0,0" VerticalAlignment="Top" Width="100" Background="#FF000050" BorderBrush="#FF000050" FontWeight="SemiBold" Height="40" FontSize="18" RenderTransformOrigin="1.08,0.5"/>
-        <Button x:Name="previous_page_button" Content="Previous" HorizontalAlignment="Left" Margin="988,549,0,0" VerticalAlignment="Top" Width="100" Background="#FF000050" BorderBrush="#FF000050" FontWeight="SemiBold" Height="40" FontSize="18" RenderTransformOrigin="1.36,0.5"/>
-        <TextBlock x:Name="asset_label" Text="Asset" Margin="55,67,680,613" FontSize="30" Foreground="#FF000050" />
-        <StackPanel Orientation="Horizontal" Width="200" VerticalAlignment="Top" Margin="1018,66,62,0">
+        <TextBlock x:Name="asset_label" Text="Asset" Margin="0,22,0,0" FontSize="30" Foreground="#FF000050" HorizontalAlignment="Left" VerticalAlignment="Top" Height="56" Width="107" Grid.Column="1" />
+        <Button x:Name="createAssetBtn" Content="Create Asset" HorizontalAlignment="Left" Margin="806,28,0,0" VerticalAlignment="Top" Width="149" Background="#FF000050" FontWeight="SemiBold" BorderBrush="#FF000050" Height="40" FontSize="18" Grid.Column="1"/>
+        <Grid Margin="0,101,0,135" Grid.Column="1">
+
+            <ListView  HorizontalAlignment="Left" Height="360" VerticalAlignment="Top" Width="955" x:Name="asset_listview" MouseDoubleClick="asset_listview_MouseDoubleClick">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Margin="10,30" Height="255" Width="200">
+                            <Image Source="{Binding Image}" Stretch="Fill" Height="200" Width="200"  Margin="0,0,0,15"/>
+                            <TextBlock Text="{Binding Name}" FontSize="18" FontWeight="SemiBold"/>
+                            <TextBlock Text="{Binding Quantity}" FontSize="16"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ListView>
+
+        </Grid>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="600,28,153,0" Grid.Column="1" Height="44">
             <TextBox x:Name="search_txtBox" 
-                     materialDesign:HintAssist.Hint="Search..." Width="170" FontSize="20" Height="40"/>
-            <materialDesign:PackIcon x:Name="search_button" Kind="Search" Foreground="#707070" VerticalAlignment="Stretch" Height="28" Width="28" MouseDown="SearchAssetName" Background="Transparent"/>
+                     materialDesign:HintAssist.Hint="Search..." FontSize="20" Width="167" Margin="0,2,0,10"/>
+            <materialDesign:PackIcon x:Name="search_button" Kind="Search" Foreground="#707070" VerticalAlignment="Stretch" Height="28" Width="28" MouseDown="SearchAssetName" Background="Transparent" Margin="0,0,0,12"/>
         </StackPanel>
+        <Button x:Name="next_page_button" Content="Next" Margin="835,450,0,0" Background="#FF000050" BorderBrush="#FF000050" FontWeight="SemiBold" Height="40" FontSize="18" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="previous_page_button" Content="Previous" Margin="693,450,142,0" Background="#FF000050" BorderBrush="#FF000050" FontWeight="SemiBold" Height="40" FontSize="18" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="120"/>
     </Grid>
 </basic:MyPage>
