--- a/Reservation/ReservationDetailPage.xaml
+++ b/Reservation/ReservationDetailPage.xaml
@@ -6,6 +6,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CLARA_Desktop.Reservation"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
       Title="ReservationDetailPage"
@@ -13,19 +14,31 @@
 
     <Grid>
         <Grid.Background>
-            <ImageBrush ImageSource="Background Reservation.png"/>
+            <ImageBrush ImageSource="/Images/Background Reservation.png"/>
         </Grid.Background>
-        <TextBlock x:Name="heading2" HorizontalAlignment="Left" Margin="55,67,680,613" TextWrapping="Wrap" Text="Reservation Detail" VerticalAlignment="Top" Foreground="#FF000050" Width="377" FontSize="30"/>
-        <Image Name="imageAsset" HorizontalAlignment="Left" Height="225" Margin="55,122,0,0" VerticalAlignment="Top" Width="245" Source="no-image.png" Stretch="Fill"/>
-        <TextBlock Name="assetName" Text="Asset name" HorizontalAlignment="Left" Margin="364,122,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="110" FontWeight="Bold" FontSize="20"/>
-        <TextBlock Name="reservee" Text="Reservee" HorizontalAlignment="Left" Height="24" Margin="364,151,0,0" VerticalAlignment="Top" Width="350" Foreground="#FF707070" FontSize="16"/>
-        <TextBlock Name="classroom" Text="Class" HorizontalAlignment="Left" Height="18" Margin="364,175,0,0" VerticalAlignment="Top" Width="48" RenderTransformOrigin="-3.364,-0.333" Foreground="#FF707070" FontSize="16"/>
-        <TextBlock x:Name="nrp" HorizontalAlignment="Left" Margin="364,203,0,0" VerticalAlignment="Top" Text="NRP" Foreground="#FF707070" FontSize="16"/>
-        <TextBlock Name="begin"  Text="Begin Date" HorizontalAlignment="Left" Margin="364,235,0,0" VerticalAlignment="Top" Height="20" Width="94" Foreground="#FF707070" FontSize="16"/>
-        <TextBlock Name="end" Text="Return Date" HorizontalAlignment="Left" Margin="364,260,0,0" VerticalAlignment="Top" Foreground="#FF707070" FontSize="16"/>
-        <TextBlock x:Name="statusUpdate" Text="Status Update" HorizontalAlignment="Left" Margin="363,292,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="170" FontWeight="Bold" FontSize="20"/>
-        <DataGrid Name="statusGrid" Margin="363,318,26,172" IsReadOnly="True" />
-        <Button x:Name="accept_button" Content="Finish" HorizontalAlignment="Left" Margin="1154,565,0,0" VerticalAlignment="Top" Width="100" Background="#FF000050" BorderBrush="#FF000050" Height="40" FontSize="18"/>
-        <Button x:Name="deny_button" Content="Reject" HorizontalAlignment="Left" Margin="1045,565,0,0" VerticalAlignment="Top" Width="100" BorderBrush="#FF707070" Background="#FF707070" Height="40" FontSize="18"/>
+        <TextBlock x:Name="heading2" HorizontalAlignment="Left" Margin="161,21,0,0" TextWrapping="Wrap" Text="Reservation Detail" VerticalAlignment="Top" Foreground="#FF000050" Width="377" FontSize="30"/>
+        <Image Name="imageAsset" HorizontalAlignment="Left" Height="225" Margin="161,76,0,0" VerticalAlignment="Top" Width="245" Source="/Images/no-image.png" Stretch="Fill"/>
+        <TextBlock x:Name="description_textBlock" Text="Description" HorizontalAlignment="Left" Margin="470,259,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="110" FontWeight="Bold" FontSize="20"/>
+        <TextBox x:Name="description"
+                VerticalAlignment="Top" Height="50" TextWrapping="Wrap"
+                VerticalScrollBarVisibility="Auto" FontSize="16"
+                materialDesign:HintAssist.Hint="Put the description here..." Margin="470,288,464,0"/>
+        <TextBlock Name="assetName" Text="Asset name" HorizontalAlignment="Left" Margin="470,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="110" FontWeight="Bold" FontSize="20"/>
+        <TextBlock Name="reservee" Text="Reservee" HorizontalAlignment="Left" Height="26" Margin="818,106,0,0" VerticalAlignment="Top" Width="350" Foreground="#FF707070" FontSize="16" FontWeight="SemiBold"/>
+        <TextBlock Name="classroom" Text="Class" HorizontalAlignment="Left" Height="26" Margin="818,134,0,0" VerticalAlignment="Top" Width="130" RenderTransformOrigin="-3.364,-0.333" Foreground="#FF707070" FontSize="16"/>
+        <TextBlock x:Name="nrp" HorizontalAlignment="Left" Margin="818,158,0,0" VerticalAlignment="Top" Text="NRP" Foreground="#FF707070" FontSize="16" Height="26" Width="130"/>
+        <TextBlock Name="begin"  Text="Begin Date" HorizontalAlignment="Left" Margin="818,192,0,0" VerticalAlignment="Top" Height="26" Width="130" Foreground="#FF707070" FontSize="16"/>
+        <TextBlock Name="end" Text="Return Date" HorizontalAlignment="Left" Margin="818,216,0,0" VerticalAlignment="Top" Foreground="#FF707070" FontSize="16" Height="26" Width="130"/>
+        <TextBlock x:Name="statusUpdate" Text="Status Update" HorizontalAlignment="Left" Margin="470,352,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="21" Width="170" FontWeight="Bold" FontSize="20"/>
+        <DataGrid Name="statusGrid" Margin="470,380,187,0" IsReadOnly="True" 
+                  VerticalAlignment="Top" Height="128"
+                  VerticalScrollBarVisibility="Auto"/>
+        <Button x:Name="accept_button" Content="Finish" HorizontalAlignment="Left" Margin="971,515,0,0" VerticalAlignment="Top" Width="120" Background="#FF000050" BorderBrush="#FF000050" Height="40" FontSize="18"/>
+        <Button x:Name="deny_button" Content="Reject" HorizontalAlignment="Left" Margin="846,515,0,0" VerticalAlignment="Top" Width="120" BorderBrush="#FF707070" Background="#FF707070" Height="40" FontSize="18"/>
+        <TextBlock x:Name="reservee_textBlock" Text="Reservee" HorizontalAlignment="Left" Margin="470,106,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="120" FontSize="16" Foreground="#707070"/>
+        <TextBlock x:Name="class_textBlock" Text="Class" HorizontalAlignment="Left" Margin="470,134,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="120" FontSize="16" Foreground="#707070"/>
+        <TextBlock x:Name="nrp_textBlock" Text="NRP" HorizontalAlignment="Left" Margin="470,158,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="120" FontSize="16" Foreground="#707070"/>
+        <TextBlock x:Name="begin_textBlock" Text="Begin Date" HorizontalAlignment="Left" Margin="470,192,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="120" FontSize="16" Foreground="#707070"/>
+        <TextBlock x:Name="end_textBlock" Text="Return Date" HorizontalAlignment="Left" Margin="470,216,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="20" Width="120" FontSize="16" Foreground="#707070"/>
     </Grid>
 </basic:MyPage>
