--- a/Dashboard/DashboardPage.xaml
+++ b/Dashboard/DashboardPage.xaml
@@ -16,10 +16,10 @@
             <RowDefinition Height="329*"/>
         </Grid.RowDefinitions>
         <Grid.Background>
-            <ImageBrush ImageSource="[Re] D W  Dashboard – 1.png"/>
+            <ImageBrush ImageSource="/Images/[Re] D W  Dashboard – 1.png"/>
         </Grid.Background>
 
-        <Image x:Name="clara_logo" Source="clara_logo_1.png" Margin="14,4,0,12" Grid.RowSpan="2" HorizontalAlignment="Left" Width="118"/>
+        <Image x:Name="clara_logo" Source="/Images/logo.png" Margin="33,1,0,15" Grid.RowSpan="2" HorizontalAlignment="Left" Width="118"/>
         <TextBlock x:Name="home_txtBlock_Copy2" HorizontalAlignment="Left" Margin="168,4,0,0" TextWrapping="Wrap" Text="|" VerticalAlignment="Top" Foreground="#FF000050" FontSize="36" Width="12" Grid.RowSpan="2" Height="43"/>
         <TextBlock x:Name="home_txtBlock" HorizontalAlignment="Left" Margin="224,15,0,0" TextWrapping="Wrap" Text="Home" VerticalAlignment="Top" Foreground="#FF000050" FontSize="20" Grid.RowSpan="2" Height="24" Width="63"/>
         <TextBlock x:Name="asset_txtBlock" HorizontalAlignment="Left" Margin="310,15,0,0" TextWrapping="Wrap" Text="Asset" VerticalAlignment="Top" Foreground="#FF000050" FontSize="20" Grid.RowSpan="2" Height="24" Width="62"/>
