--- a/Login/LoginPage.xaml
+++ b/Login/LoginPage.xaml
@@ -11,13 +11,13 @@
       FontFamily="{StaticResource OpenSans}">
 
     <Grid Background="White">
-        <Image x:Name="clara_logo" Source="clara_logo_1.png" Margin="201,180,829,440"/>
-        <TextBlock Text="Sign into your account!" TextAlignment="Center" VerticalAlignment="Top" Margin="224,285,856,0" FontFamily="Open Sans" FontSize="18"/>
+        <Image x:Name="clara_logo" Source="/Images/logo.png" Margin="201,128,829,440" RenderTransformOrigin="0.483,0.433"/>
+        <TextBlock Text="Sign into your account!" TextAlignment="Center" VerticalAlignment="Top" Margin="224,271,856,0" FontFamily="Open Sans" FontSize="18"/>
         <Button 
             x:Name="login_button" 
             Content="SIGN IN" 
             HorizontalAlignment="Left" 
-            Margin="201,461,0,0" 
+            Margin="201,447,0,0" 
             VerticalAlignment="Top" 
             Width="250" 
             Height="40"
@@ -25,19 +25,19 @@
             BorderBrush="#FF000050" 
             FontFamily="Open Sans" 
             FontWeight="Bold"/>
-        <StackPanel Orientation="Horizontal" Width="250" VerticalAlignment="Top" Margin="201,347,829,0">
+        <StackPanel Orientation="Horizontal" Width="250" VerticalAlignment="Top" Margin="201,333,829,0">
             <materialDesign:PackIcon Kind="Email" Foreground="#707070" VerticalAlignment="Center" Width="18" Height="18"/>
             <TextBox x:Name="email_textBox" 
                      materialDesign:HintAssist.Hint="Email" FontFamily="Open Sans" Width="250" Height="30" FontSize="16" PreviewTextInput="email_textBox_PreviewTextInput"/>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Width="250" VerticalAlignment="Top" Margin="201,397,829,0">
+        <StackPanel Orientation="Horizontal" Width="250" VerticalAlignment="Top" Margin="201,383,829,0">
             <materialDesign:PackIcon Kind="Lock" Foreground="#707070" VerticalAlignment="Center" Width="18" Height="18" RenderTransformOrigin="4.333,0.944"/>
             <PasswordBox x:Name="password_box"
                          materialDesign:HintAssist.Hint="Password" FontFamily="Open Sans" Width="250" Height="30" FontSize="16"/>
         </StackPanel>
         <Image 
             x:Name="sign_in_image" 
-            Source="undraw_responsive_6c8s.png" 
+            Source="/Images/undraw_responsive_6c8s.png" 
             Margin="470,160,80,160"/>
 
     </Grid>
